--- a/src/home/template.pug
+++ b/src/home/template.pug
@@ -14,5 +14,38 @@ html
         margin-left:0px;
         margin-bottom:20px;
       }
+
+      ul{
+         list-style: none;
+         display:flex;
+         flex-wrap:wrap;
+      }
+
+      ul li{
+        border:2px solid #ccc;
+        margin:20px;
+      }
+
+      .info{
+        display:flex;
+        justify-content: space-between;
+      }
+
+      .info a{
+        display:block;
+        padding:10px;
+        color:#666666;
+
+        max-width:200px;
+        white-space: nowrap; 
+        overflow: hidden;
+        text-overflow: ellipsis;
+        
+      }
+
+      .info span{
+        padding:10px;
+        display:block;
+      }
   body
     div !{html}
