--- a/src/home/template.pug
+++ b/src/home/template.pug
@@ -7,7 +7,7 @@ html
     style(type="text/css").
       body{
         font-family: Helvetica, Arial, Sans-Serif;
-        margin-left:50px;
+        font-size:0.9em;
       }
       h1 {
         font-size:1.2em;
@@ -15,15 +15,20 @@ html
         margin-bottom:20px;
       }
 
+      .container{
+        margin:50px;
+      }
+
       ul{
-         list-style: none;
-         display:flex;
-         flex-wrap:wrap;
+        display: grid;
+        padding: 1rem;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        grid-gap: 1rem;
       }
 
       ul li{
-        border:2px solid #ccc;
-        margin:20px;
+        border:1px solid #ccc;
+        display: grid;
       }
 
       .info{
@@ -35,8 +40,7 @@ html
         display:block;
         padding:10px;
         color:#666666;
-
-        max-width:200px;
+        width:200px;
         white-space: nowrap; 
         overflow: hidden;
         text-overflow: ellipsis;
@@ -47,5 +51,15 @@ html
         padding:10px;
         display:block;
       }
+
+      .paging{
+        display:flex;
+        justify-content:flex-end;
+      }
+
+      .paging a{
+        display:inline-block;
+        margin-bottom:20px;
+      }
   body
-    div !{html}
+    div(class="container") !{html}
